Fixed issue with inventory table display. Added function to bind data from DB to location dropdown on Outgoing form.

--- a/ROIS/ROIS.csproj
+++ b/ROIS/ROIS.csproj
@@ -1408,6 +1408,7 @@
     <Compile Include="Models\InventoryDt.cs" />
     <Compile Include="Models\InventorySummaryDt.cs" />
     <Compile Include="Models\ITRLTPostedSubdetails.cs" />
+    <Compile Include="Models\LocationDropDown.cs" />
     <Compile Include="Models\LoginAuthResult.cs" />
     <Compile Include="Models\Outgoing.cs" />
     <Compile Include="Models\PostedDetailsTable.cs" />
