--- a/ROIS/bin/ROIS.dll.config
+++ b/ROIS/bin/ROIS.dll.config
@@ -22,7 +22,7 @@
 	</system.codedom>
 
 	<connectionStrings>
-		<add name="ROISConnection" connectionString="Server=DESKTOP-QR0766Q;Initial Catalog=simple_inventory;User Id=sa;Password=sa;" providerName="System.Data.SqlClient" />
+		<add name="ROISConnection" connectionString="Server=helen;Initial Catalog=rois;User Id=sb;Password=sb;" providerName="System.Data.SqlClient" />
 		<add name="SDISNetConnection" connectionString="Server=10.10.10.9;Initial Catalog=SDISNet;User Id=sb;Password=sb;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 
